# Inside of setup.cfg
[metadata]
name = PyAcpTrak
version = 0.0.12
author = HeytalePazguato (Jorge Centeno)
author_email = Heytale.Pazguato@gmail.com
description = Create ACOPOStrak resources for training, meetings, mappView widgets, etc...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HeytalePazguato/PyAcpTrak
project_urls =
    Bug Tracker = https://github.com/HeytalePazguato/PyAcpTrak/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src